syntax = "proto3";

package raft;

service RaftCore {
  rpc Vote(VoteRequest) returns (VoteResponse);
  rpc Heartbeat(HeartbeatRequest) returns (EntryResponse);
}

message VoteRequest {
  uint64 term = 1;
  uint32 candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message VoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message RaftMessage {
  uint64 term = 1;
  uint32 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  uint64 leader_commit = 5;
}

message HeartbeatRequest {
  RaftMessage message = 1;
}

message EntryResponse {
  uint64 term = 1;
  bool success = 2;
}
